// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GitConfigForm snapshot with predefined git configuration 1`] = `
<form
  className="pf-v6-c-form"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="pf-v6-c-form__group"
  >
    <div
      className="pf-v6-c-form__group-label"
    >
      <label
        className="pf-v6-c-form__label"
        htmlFor="gitconfig"
      >
        <span
          className="pf-v6-c-form__label-text"
        >
          gitconfig
        </span>
      </label>
        
    </div>
    <div
      className="pf-v6-c-form__group-control"
    >
      <div>
        <input
          data-testid="submit-invalid-git-config"
          onClick={[Function]}
          type="button"
          value="[user]
    email="user-1@chetest.com"
    name="User One"
    "
        />
        <input
          data-testid="submit-valid-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-invalid-email-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-empty-name-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-long-name-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-missing-user-section-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-empty-email-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-long-email-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-parse-error-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-max-length-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-only-name-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-only-email-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-both-null-git-config"
          onClick={[Function]}
          type="button"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`GitConfigForm snapshot without predefined git configuration 1`] = `
<form
  className="pf-v6-c-form"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="pf-v6-c-form__group"
  >
    <div
      className="pf-v6-c-form__group-label"
    >
      <label
        className="pf-v6-c-form__label"
        htmlFor="gitconfig"
      >
        <span
          className="pf-v6-c-form__label-text"
        >
          gitconfig
        </span>
      </label>
        
    </div>
    <div
      className="pf-v6-c-form__group-control"
    >
      <div>
        <input
          data-testid="submit-invalid-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-valid-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-invalid-email-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-empty-name-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-long-name-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-missing-user-section-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-empty-email-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-long-email-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-parse-error-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-max-length-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-only-name-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-only-email-git-config"
          onClick={[Function]}
          type="button"
        />
        <input
          data-testid="submit-both-null-git-config"
          onClick={[Function]}
          type="button"
        />
      </div>
    </div>
  </div>
</form>
`;
